--- a/tools/shortcuts/mcc_daqhats_manager.desktop
+++ b/tools/shortcuts/mcc_daqhats_manager.desktop
@@ -1,11 +1,10 @@
 [Desktop Entry]
 Version=1.0
-Name=DAQ HAT Manager
+Name=MCC DAQ HAT Manager
 Comment=Manage and control MCC DAQ HATs
-Exec=/usr/share/mcc/daqhats/daqhats_manager.py
+Exec=/usr/bin/python3 /usr/share/mcc/daqhats/daqhats_manager.py
 Type=Application
 Categories=Utility
 StartupNotify=false
-StartupWMClass=Daqhatapp
 Terminal=false
 Icon=/usr/share/mcc/daqhats/icon.png
