Fixing MCC 118 comms issue, updating MCC 134 code.

--- a/lib/makefile
+++ b/lib/makefile
@@ -7,7 +7,7 @@ INSTALL_DIR = /usr/local/lib
 BUILD_DIR = ./build
 
 CC = gcc 
-CFLAGS = -I../include -I/opt/vc/include -fPIC -Wall -Wextra -g -O2
+CFLAGS = -I../include -I/opt/vc/include -fPIC -Wall -Wextra -g -O2 -DENABLE_LOCALES=Off
 LDFLAGS = -L/opt/vc/lib -shared -pthread -lm -lbcm_host -Wl,-soname,lib$(NAME).so.$(MAJOR)
 RM = rm -f  
 TARGET_LIB = lib$(NAME).so.$(VERSION)
