--- a/examples/c/mcc172/continuous_scan/makefile
+++ b/examples/c/mcc172/continuous_scan/makefile
@@ -1,6 +1,6 @@
 NAME = continuous_scan
 OBJ = $(NAME).o
-LIBS = -ldaqhats
+LIBS = -ldaqhats -lm
 CFLAGS = -Wall -I/usr/local/include -g
 CC = gcc
 EXTENSION = .c
