--- a/examples/c/mcc172/makefile
+++ b/examples/c/mcc172/makefile
@@ -1,6 +1,6 @@
 TOPTARGETS := all clean
 
-SUBDIRS := continuous_scan finite_scan finite_scan_with_trigger multi_hat_synchronous_scan
+SUBDIRS := continuous_scan finite_scan
 
 $(TOPTARGETS): $(SUBDIRS)
 $(SUBDIRS):
