Adding fft_scan to makefile

--- a/examples/c/mcc172/makefile
+++ b/examples/c/mcc172/makefile
@@ -1,6 +1,6 @@
 TOPTARGETS := all clean
 
-SUBDIRS := continuous_scan finite_scan
+SUBDIRS := continuous_scan finite_scan fft_scan
 
 $(TOPTARGETS): $(SUBDIRS)
 $(SUBDIRS):
