MCC172 Data Logger Update - Add sensor sensitivity, add zooming on data plot, reduce number of files, flatten structure, general code cleanup.

--- a/examples/c/mcc172/makefile
+++ b/examples/c/mcc172/makefile
@@ -1,6 +1,6 @@
 TOPTARGETS := all clean
 
-SUBDIRS := continuous_scan finite_scan fft_scan
+SUBDIRS := continuous_scan finite_scan fft_scan data_logger
 
 $(TOPTARGETS): $(SUBDIRS)
 $(SUBDIRS):
