--- a/examples/c/mcc172/data_logger/logger/makefile
+++ b/examples/c/mcc172/data_logger/logger/makefile
@@ -1,10 +1,8 @@
-NAME = data_logger
-COMMON_DIR = ../../common/data_logger
-OBJ = $(NAME).o fft.o $(COMMON_DIR)/log_file.o $(COMMON_DIR)/errors.o
+NAME = logger
+OBJ = $(NAME).o fft.o log_file.o errors.o
 DEPS = kiss_fft/kiss_fftr.o kiss_fft/kiss_fft.o
 LIBS = -ldaqhats -lm -lgtkdatabox -pthread `pkg-config --libs gtk+-3.0`
-CFLAGS = -Wall -I/usr/local/include -Ikiss_fft `pkg-config --cflags gtk+-3.0` -g -I$(COMMON_DIR)
-VPATH = $(COMMON_DIR)
+CFLAGS = -Wall -I/usr/local/include -Ikiss_fft `pkg-config --cflags gtk+-3.0` -g
 CC = gcc
 EXTENSION = .c
 
@@ -23,4 +21,4 @@ $(NAME): $(OBJ)
 
 clean:
 	(cd kiss_fft; make clean)
-	rm -f *.o $(COMMON_DIR)/*.o *~ core $(NAME)
+	rm -f *.o *~ core $(NAME)
