--- a/include/makefile
+++ b/include/makefile
@@ -7,7 +7,7 @@ clean: ;
 
 install:
 	@install -d $(INSTALL_DIR)
-	@install -D -m0644 *.h $(INSTALL_DIR)
+	@install -m0644 *.h $(INSTALL_DIR)
 
 uninstall:
 	@rm -rf $(INSTALL_DIR)
