Fixing various issues

--- a/tools/makefile
+++ b/tools/makefile
@@ -2,7 +2,7 @@ CC = gcc
 INCLUDE_DIR = ../include
 LIB_DIR = ../lib
 CFLAGS = -I$(INCLUDE_DIR) -I$(LIB_DIR) -g
-OFLAGS = -ldaqhats 
+OFLAGS = -ldaqhats
 DEPS = $(INCLUDE_DIR)/mcc118.h $(INCLUDE_DIR)/daqhats.h $(LIB_DIR)/mcc118_update.h
 INSTALL_DIR = /usr/local/bin
 SHORTCUT_DIR = /usr/share/applications
@@ -19,10 +19,13 @@ mcc118_firmware_update: mcc118_firmware_update.o
 
 daqhats_list_boards: daqhats_list_boards.o
 	$(CC) -o $@ $^ $(OFLAGS)
-    
+
+daqhats_check_152: daqhats_check_152.o
+	$(CC) -o $@ $^ $(OFLAGS)
+
 .PHONY: clean
 
-all: mcc118_firmware_update daqhats_list_boards mcc172_firmware_update
+all: mcc118_firmware_update daqhats_list_boards mcc172_firmware_update daqhats_check_152
 
 install:
 	@install -D mcc172_firmware_update $(INSTALL_DIR)
@@ -30,6 +33,7 @@ install:
 	@install -D daqhats_read_eeproms $(INSTALL_DIR)
 	@install -D daqhats_list_boards $(INSTALL_DIR)
 	@install -D daqhats_version $(INSTALL_DIR)
+	@install -D daqhats_check_152 $(INSTALL_DIR)
 	@install -d $(APPS_DIR)
 	@install -D applications/*.py $(APPS_DIR)
 	@install -D -m 0644 applications/*.png $(APPS_DIR)
@@ -41,10 +45,11 @@ uninstall:
 	@rm -f $(INSTALL_DIR)/daqhats_read_eeproms
 	@rm -f $(INSTALL_DIR)/daqhats_list_boards
 	@rm -f $(INSTALL_DIR)/daqhats_version
+	@rm -f $(INSTALL_DIR)/daqhats_check_152
 	@rm -rf $(APPS_DIR)
 	@rm -f $(SHORTCUT_DIR)/mcc*_control_panel.desktop
 
 .DEFAULT_GOAL := all
 
 clean:
-	@rm -f *.o *~ core mcc118_firmware_update mcc172_firmware_update
+	@rm -f *.o *~ core mcc118_firmware_update mcc172_firmware_update daqhats_list_boards daqhats_check_152
