--- a/lib/makefile
+++ b/lib/makefile
@@ -7,8 +7,9 @@ INSTALL_DIR = /usr/local/lib
 BUILD_DIR = ./build
 
 CC = gcc
-CFLAGS = -I../include -I/opt/vc/include -fPIC -Wall -Wextra -g -O2 -DENABLE_LOCALES=Off
-LDFLAGS = -L/opt/vc/lib -shared -pthread -lm -lbcm_host -Wl,-soname,lib$(NAME).so.$(MAJOR)
+CFLAGS = -I../include -I/usr/include -fPIC -Wall -Wextra -g -O2 -DENABLE_LOCALES=Off
+LDFLAGS = -zdefs -shared -pthread -Wl,-soname,lib$(NAME).so.$(MAJOR)
+DEPLIBS = -lm -lbcm_host
 RM = rm -f
 TARGET_LIB = lib$(NAME).so.$(VERSION)
 
@@ -22,7 +23,7 @@ all: $(BUILD_DIR)/$(TARGET_LIB)
 
 $(BUILD_DIR)/$(TARGET_LIB): $(OBJS)
 	@mkdir -p $(@D)
-	$(CC) ${LDFLAGS} -o $@ $^
+	$(CC) ${LDFLAGS} -o $@ $^ $(DEPLIBS)
 
 -include $(DEPS)
 
