--- a/examples/c/mcc172/data_logger/logger/makefile
+++ b/examples/c/mcc172/data_logger/logger/makefile
@@ -2,7 +2,7 @@ NAME = logger
 OBJ = $(NAME).o fft.o log_file.o errors.o
 DEPS = kiss_fft/kiss_fftr.o kiss_fft/kiss_fft.o
 LIBS = -ldaqhats -lm -lgtkdatabox -pthread `pkg-config --libs gtk+-3.0`
-CFLAGS = -Wall -I/usr/local/include -Ikiss_fft `pkg-config --cflags gtk+-3.0` -g
+CFLAGS = -Wall -I/usr/local/include -Ikiss_fft `pkg-config --cflags gtk+-3.0` -g -D_FILE_OFFSET_BITS=64
 CC = gcc
 EXTENSION = .c
 
