--- a/examples/c/mcc134/data_logger/logger/makefile
+++ b/examples/c/mcc134/data_logger/logger/makefile
@@ -1,7 +1,7 @@
 NAME = logger
 OBJ = $(NAME).o log_file.o errors.o
 LIBS = -ldaqhats -lgtkdatabox -pthread `pkg-config --libs gtk+-3.0` -lm
-CFLAGS = `pkg-config --cflags gtk+-3.0`
+CFLAGS = `pkg-config --cflags gtk+-3.0` -D_FILE_OFFSET_BITS=64
 
 CC = gcc
 
